@@ -5,8 +5,7 @@ import builders.SimpleRecipeBuilder;
 import enums.FoodGroup;
 import food.Food;
 import ingredient.Ingredient;
-import nutritionalCondition.Vegan;
-import nutritionalCondition.Vegetarian;
+import nutritionalCondition.*;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -17,6 +16,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @DisplayName("Given a compound recipe")
 public class CompoundRecipeTest {
@@ -30,8 +31,12 @@ public class CompoundRecipeTest {
     @Test
     @DisplayName("es inadecuada para el conjunto de condiciones alimenticias de sus subrecetas")
     public void inadequateCompoundRecipe() {
-        var nutritionalConditions = new HashSet<>(Arrays.asList(Vegan.getInstance(),
-                Vegetarian.getInstance()));
+        var nutritionalConditions = Stream.of(Vegan.getInstance(),
+                Vegetarian.getInstance(),
+                Hypertensive.getInstance(),
+                Diabetic.getInstance())
+                    .collect(Collectors.toCollection(HashSet::new));
+
         Assertions.assertEquals(nutritionalConditions, compoundRecipe.inadequateConditions());
     }
 
@@ -48,17 +53,51 @@ public class CompoundRecipeTest {
                 .addInadequateCondition(Vegan.getInstance())
                 .build();
 
-        var ingredientOne = new Ingredient(foodOne, "150 g");
+        var foodTwo = foodBd
+                .setName("food two")
+                .setDescription("food two description")
+                .setFoodGroup(FoodGroup.VEGETABLES_FRUITS_SEEDS)
+                .addInadequateCondition(Hypertensive.getInstance())
+                .build();
 
-        var simpleRecipe = simpleRecipeBd
+        var foodThree = foodBd
+                .setName("food three")
+                .setDescription("food two description")
+                .setFoodGroup(FoodGroup.DAIRY_DERIVATIVES)
+                .addInadequateCondition(Diabetic.getInstance())
+                .build();
+
+        var ingredientOne = new Ingredient(foodOne, "150 g");
+        var ingredientTwo = new Ingredient(foodTwo, "150 g");
+        var ingredientThree = new Ingredient(foodThree, "150 g");
+
+        var simpleRecipeOne = simpleRecipeBd
                 .setAuthor(authorOne)
                 .setCalories(100f)
                 .addPreparationStep("step one")
                 .addIngredient(ingredientOne)
                 .build();
 
+        var simpleRecipeTwo = simpleRecipeBd
+                .setAuthor(authorOne)
+                .setCalories(200f)
+                .addPreparationStep("step one")
+                .addIngredient(ingredientTwo)
+                .build();
+
+        var simpleRecipeThree = simpleRecipeBd
+                .setAuthor(authorOne)
+                .setCalories(300f)
+                .addPreparationStep("step one")
+                .addIngredient(ingredientThree)
+                .build();
+
+        var compoundRecipeTwo = new CompoundRecipe(authorOne,
+                new HashSet<>(),
+                new ArrayList<>(List.of(simpleRecipeThree)));
+
         compoundRecipe = new CompoundRecipe(compoundUser,
                 new HashSet<>(),
-                new ArrayList<>(List.of(simpleRecipe)));
+                new ArrayList<>(Arrays.asList(simpleRecipeOne, simpleRecipeTwo, compoundRecipeTwo)));
     }
 }
